ci: Add Build Script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "pnpm zip",
     "gulp": "gulp",
     "zip": "gulp zip"
   },
