ci: Fix Artifact Build
If using upload-artifact, we should rather ensure not to "zip the zip"
but just ZIP the theme, as gulp would do it for us.

To simplify the process, moved all files relevant for the theme to
a dedicated folders, which spares a bunch of exclusions.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: gest-hh-neve-child
-          path: gest-hh-neve-child.zip
+          path: /theme
           retention-days: 10
+          compression-level: 9
       - id: output-build-info
         name: Output artifact ID
         run:  echo 'Artifact ID is ${{ steps.upload-child-theme.outputs.artifact-id }}'
