--- a/.github/workflows/about-engines-node.yml
+++ b/.github/workflows/about-engines-node.yml
@@ -49,7 +49,7 @@ jobs:
           sparse-checkout: |
             ./package.json
             ./pnpm-lock.yaml
-            ./scripts/**/*
+            ./scripts
       - id: installPnpm
         name: "Install: Use PNPM ${{ env.pnpmVersion }}"
         uses: pnpm/action-setup@v2
