--- a/.github/workflows/about.yml
+++ b/.github/workflows/about.yml
@@ -1,10 +1,4 @@
-# Retrieves engine information from package.json for node.
-#
-# On manual call outputs the versions found.
-# On reusable workflow call provides version information as
-# `nodeVersion`.
-
-name: about-engines-node
+name: "About"
 
 on:
   workflow_dispatch:
@@ -13,17 +7,17 @@ on:
         description: "If to output the resulting version as summary."
         required: false
         type: boolean
-        default: false
+        default: true
   workflow_call:
     inputs:
       verbose:
+        description: "If to output the resulting version as summary."
         required: false
         type: boolean
         default: false
-    outputs:
-      nodeVersion:
-        description: "Determined node version from package.json"
-        value: ${{ jobs.main.outputs.nodeVersion }}
+
+run-name: |
+  ${{ github.workflow }} (verbose: ${{ github.event.inputs.verbose }})
 
 env:
   # https://github.com/actions/runner-images/issues/70
@@ -35,11 +29,13 @@ permissions: {}
 
 jobs:
   main:
-    name: "Get Node Engine Information"
+    name: "About"
     runs-on: ubuntu-latest
     timeout-minutes: 5
     outputs:
       nodeVersion: ${{ steps.get-node-version.outputs.result }}
+      pnpmVersion: ${{ steps.get-pnpm-version.outputs.result }}
+      version: ${{ steps.get-version.outputs.result }}
     steps:
       - id: checkout
         name: Checkout
@@ -67,14 +63,31 @@ jobs:
         run: |
           pnpm install --frozen-lockfile
       - id: get-node-version
-        name: "Get Node.js version"
+        name: "Get Node.js Version"
         run: |
-          result=$(pnpm --silent about:engines-node)
+          result=$(pnpm --silent about engines node)
           echo "result=${result}" >> $GITHUB_OUTPUT
-      - id: output-results
-        if: ${{ inputs.verbose }}
-        name: "Output Results"
+      - id: get-pnpm-version
+        name: "Get PNPM Version"
         run: |
-          echo "# Detected Node Engine" >> $GITHUB_STEP_SUMMARY
+          result=$(pnpm --silent about engines pnpm)
+          echo "result=${result}" >> $GITHUB_OUTPUT
+      - id: get-version
+        name: "Get Version"
+        run: |
+          result=$(pnpm --silent about version)
+          echo "result=${result}" >> $GITHUB_OUTPUT
+  verbose:
+    name: "Verbose"
+    runs-on: ubuntu-latest
+    needs: main
+    if: ${{ github.event.inputs.verbose }}
+    steps:
+      - id: output
+        name: "Output"
+        run: |
+          echo "# About" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "* Node Version: ${{ steps.get-node-version.outputs.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "* Node Version: ${{ needs.main.outputs.nodeVersion }}" >> $GITHUB_STEP_SUMMARY
+          echo "* PNPM Version: ${{ needs.main.outputs.pnpmVersion }}" >> $GITHUB_STEP_SUMMARY
+          echo "* Version: ${{ needs.main.outputs.version }}" >> $GITHUB_STEP_SUMMARY
