--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   },
   "private": true,
   "scripts": {
-    "about:engines-node": "node ./scripts/about-engines-node.mjs",
-    "about:engines-pnpm": "node ./scripts/about-engines-pnpm.mjs",
-    "about:version": "node ./scripts/about-version.mjs",
+    "about": "node ./scripts/about.mjs",
     "preadd": "node ./scripts/check-pnpm.mjs",
     "build": "pnpm zip",
     "preinstall": "node ./scripts/check-pnpm.mjs",
@@ -25,6 +23,7 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-zip": "^5.1.0",
+    "minimist": "^1.2.8",
     "read-package-json": "^7.0.1"
   }
 }
