ci: Fix check-pnpm

--- a/.github/workflows/about.yml
+++ b/.github/workflows/about.yml
@@ -42,8 +42,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-#          sparse-checkout: |
-#            scripts
+          sparse-checkout: |
+            scripts
       - id: files
         name: "Files"
         run: |
