--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "exit 0",
     "preinstall": "node ./scripts/check-pnpm.mjs",
     "preremove": "node ./scripts/check-pnpm.mjs",
+    "get-version": "node ./scripts/version.mjs",
     "zip": "gulp zip"
   },
   "keywords": [],
@@ -23,6 +24,7 @@
     "gulp": "^4.0.2",
     "gulp-zip": "^5.1.0",
     "minimist": "^1.2.8",
-    "read-package-json": "^7.0.1"
+    "read-package-json": "^7.0.1",
+    "semver": "^7.6.0"
   }
 }
