--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ on:
         type: boolean
         default: false
     outputs:
+      artifact-name:
+        description: "Name of the uploaded artifact"
+        value: ${{ jobs.main.outputs.artifact-name }}
       artifact-id:
         description: "ID of the uploaded artifact"
         value: ${{ jobs.main.outputs.artifact-id }}
@@ -45,6 +48,7 @@ jobs:
       pnpmVersion: ${{ needs.about.outputs.pnpmVersion }}
       version: ${{ needs.about.outputs.version }}
     outputs:
+      artifact-name: ${{ steps.artifact-name.outputs.artifact-name }}
       artifact-id: ${{ steps.upload-child-theme.outputs.artifact-id }}
       artifact-url: ${{ steps.upload-child-theme.outputs.artifact-url }}
     steps:
@@ -71,11 +75,16 @@ jobs:
         name: "Build"
         run: |
           pnpm -r build
+      - id: artifact-name
+        name: "Generate Artifact Name"
+        run: |
+          result="${{ env.name }}-v${{ env.version }}"
+          echo "result=${result}" >> $GITHUB_OUTPUT
       - id: upload-child-theme
         name: "Upload Child Theme"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.name }}-${{ env.version }}
+          name: ${{ steps.artifact-name.outputs.result }}
           path: build/**/*
           retention-days: 10
           compression-level: 9
@@ -86,7 +95,6 @@ jobs:
     name: "Verbose"
     runs-on: ubuntu-latest
     needs:
-      - about
       - main
     if: ${{ github.event.inputs.verbose }}
     steps:
@@ -95,4 +103,4 @@ jobs:
         run: |
           echo "# Build Result" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "* Child Theme: [gest-hh-neve-child-${{ needs.about.outputs.version }}.zip](${{ needs.main.outputs.artifact-url }})" >> $GITHUB_STEP_SUMMARY
+          echo "* Child Theme: [${{ needs.main.outputs.artifact-name }}.zip](${{ needs.main.outputs.artifact-url }})" >> $GITHUB_STEP_SUMMARY
