--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -16,7 +16,7 @@ on:
         description: "If to output a summary."
         required: false
         type: boolean
-        default: false
+        default: true
   workflow_call:
     inputs:
       release_type:
