--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -101,8 +101,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           snapshotType="prerelease"
-          snapshotVersion=$(pnpm version "${releaseType}" --message "chore: next snapshot version: %s")
+          snapshotVersion="$(pnpm version "${releaseType}" --message "chore: next snapshot version: %s")"
           echo "result=${snapshotVersion}" >> $GITHUB_OUTPUT
+      - id: git-push
+        name: "Push Changes"
+        run: |
+          git push --follow-tags
   verbose:
     name: "Verbose"
     runs-on: ubuntu-latest
