--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "preremove": "node ./scripts/check-pnpm.mjs",
     "preversion": "exit 0",
     "version": "pnpm build",
-    "postversion": "git push && git push --tags",
+    "postversion": "exit 0",
     "wordpress-theme-meta": "node ./scripts/wordpress-theme-meta.mjs",
     "zip": "gulp zip"
   },
