--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -93,7 +93,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           releaseType=${{ github.event.inputs.release_type }}
-          releaseVersion="$(pnpm version "${releaseType}" --message "chore: release ${releaseType}: %s")"
+          releaseVersion="$(pnpm --silent version "${releaseType}" --message "chore: release ${releaseType}: %s")"
           echo "result=${releaseVersion}"
           echo "result=${releaseVersion}" >> $GITHUB_OUTPUT
       - id: inc-snapshot-version
