ci: Also Fix Snapshot Build

--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -94,7 +94,6 @@ jobs:
         run: |
           releaseType=${{ github.event.inputs.release_type }}
           releaseVersion="$(pnpm --silent version "${releaseType}" --message "chore: release ${releaseType}: %s")"
-          echo "result=${releaseVersion}"
           echo "result=${releaseVersion}" >> $GITHUB_OUTPUT
       - id: inc-snapshot-version
         name: "Increment Snapshot Version"
@@ -102,7 +101,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           snapshotType="prerelease"
-          snapshotVersion="$(pnpm version "${releaseType}" --no-git-tag-version version)"
+          snapshotVersion="$(pnpm --silent version "${releaseType}" --no-git-tag-version version)"
           git commit -am "chore: next snapshot version: ${snapshotVersion}"
           echo "result=${snapshotVersion}" >> $GITHUB_OUTPUT
       - id: git-push
