--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "preinstall": "node ./scripts/check-pnpm.mjs",
     "preremove": "node ./scripts/check-pnpm.mjs",
     "preversion": "exit 0",
-    "version": "pnpm --silent build",
+    "version": "pnpm --silent build --silent",
     "postversion": "exit 0",
     "wordpress-theme-meta": "node ./scripts/wordpress-theme-meta.mjs",
     "zip": "gulp zip"
