--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -48,7 +48,7 @@ on:
         value: ${{ jobs.main.outputs.nextVersion }}
 
 run-name: |
-  ${{ github.workflow }} (release type: ${{ github.event.inputs.release_type }}, dry-run? ${{ github.event.inputs.dryRun }}, verbose: ${{ github.event.inputs.verbose }})
+  ${{ github.workflow }} (release type: ${{ github.event.inputs.release_type }}, dry-run: ${{ github.event.inputs.dryRun }}, verbose: ${{ github.event.inputs.verbose }})
 
 env:
   # https://github.com/actions/runner-images/issues/70
