ci: Release Script

--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -38,7 +38,7 @@ on:
         description: "If to perform a dryRun without push at the end."
         required: false
         type: boolean
-        default: true
+        default: false
     outputs:
       version:
         description: "Released version"
