--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,9 @@ on:
         description: "Snapshot version"
         value: ${{ jobs.version.outputs.nextVersion }}
 
+run-name: |
+  ${{ github.workflow }} (release type: ${{ github.event.inputs.release_type }}, dry-run: ${{ github.event.inputs.dryRun }}, verbose: ${{ github.event.inputs.verbose }})
+
 env:
   # https://github.com/actions/runner-images/issues/70
   NODE_OPTIONS: "--max_old_space_size=4096"
@@ -88,3 +91,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: ${{ needs.build.outputs.artifact-name }}.zip
+  verbose:
+    name: "Verbose"
+    runs-on: ubuntu-latest
+    needs: main
+    if: ${{ github.event.inputs.verbose }}
+    steps:
+      - id: output
+        name: "Output"
+        run: |
+          echo "# Release Version" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "* Released Version: _TODO_" >> $GITHUB_STEP_SUMMARY
+          echo "* Snapshot Version: _TODO_" >> $GITHUB_STEP_SUMMARY
