--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,6 @@ jobs:
     with:
       release_type: ${{ github.event.inputs.release_type }}
       verbose: ${{ github.event.inputs.verbose == 'true'}}
-      dryRun: ${{ github.event.inputs.dryRun == 'true' }}
   build:
     name: "Build"
     uses: "./.github/workflows/build.yml"
@@ -78,24 +77,33 @@ jobs:
     needs:
       - build
       - version
+    env:
+      dryRun: ${{ github.event.inputs.dryRun == 'true' }}
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: ${{ needs.build.outputs.artifact-name }}
       - id: gh-release
-        if: ${{ !github.event.inputs.dryRun }}
+        if: ${{ !env.dryRun }}
         name: "Create Release"
         uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: ${{ needs.build.outputs.artifact-name }}.zip
+      - id: gh-release-dry-run
+        if: ${{ env.dryRun }}
+        name: "Create Release (Dry Run)"
+        run: |
+          echo "Would create a release with ${{ needs.build.outputs.artifact-name }}.zip"
   verbose:
     name: "Verbose"
     runs-on: ubuntu-latest
     needs: main
-    if: ${{ github.event.inputs.verbose }}
+    env:
+      verbose: ${{ github.event.inputs.verbose == 'true'}}
+    if: ${{ env.verbose }}
     steps:
       - id: output
         name: "Output"
