--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -125,12 +125,12 @@ jobs:
           echo "Next Version: ${snapshotVersion}"
           echo "result=${snapshotVersion}" >> $GITHUB_OUTPUT
       - id: git-push
-        if: ${{ env.DRY_RUN == 'false'}}
+        if: env.DRY_RUN == 'false'
         name: "Push Changes"
         run: |
           git push --follow-tags
       - id: git-push-dry-run
-        if: ${{ env.DRY_RUN == 'true' }}
+        if: env.DRY_RUN == 'true'
         name: "Push Changes (Dry Run)"
         run: |
           git push --follow-tags --dry-run
@@ -138,7 +138,7 @@ jobs:
     name: "Verbose"
     runs-on: ubuntu-latest
     needs: main
-    if: ${{ env.VERBOSE == 'true' }}
+    if: env.VERBOSE == 'true'
     steps:
       - id: output
         name: "Output"
