--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -53,10 +53,8 @@ run-name: |
 env:
   # https://github.com/actions/runner-images/issues/70
   NODE_OPTIONS: "--max_old_space_size=4096"
-  DRY_RUN: ${{ github.event.inputs.dryRun }}
-  RELEASE_TYPE: ${{ github.event.inputs.release_type }}
+  RELEASE_TYPE: ${{ inputs.release_type }}
   SNAPSHOT_TYPE: "prerelease"
-  VERBOSE: ${{ github.event.inputs.verbose }}
   USER_NAME: ${{ github.actor }}
   USER_MAIL: "${{ github.actor }}@users.noreply.github.com"
 
@@ -125,12 +123,12 @@ jobs:
           echo "Next Version: ${snapshotVersion}"
           echo "result=${snapshotVersion}" >> $GITHUB_OUTPUT
       - id: git-push
-        if: env.DRY_RUN == 'false'
+        if: ${{ inputs.dryRun == 'false' }}
         name: "Push Changes"
         run: |
           git push --follow-tags
       - id: git-push-dry-run
-        if: env.DRY_RUN == 'true'
+        if: ${{ inputs.dryRun == 'true' }}
         name: "Push Changes (Dry Run)"
         run: |
           git push --follow-tags --dry-run
@@ -138,7 +136,7 @@ jobs:
     name: "Verbose"
     runs-on: ubuntu-latest
     needs: main
-    if: env.VERBOSE == 'true'
+    if: ${{ inputs.verbose == 'true' }}
     steps:
       - id: output
         name: "Output"
@@ -146,8 +144,8 @@ jobs:
           echo "# Release Version" >> $GITHUB_STEP_SUMMARY
           echo "## Parameters" >> $GITHUB_STEP_SUMMARY
           echo "* Released Type: ${{ env.RELEASE_TYPE }}" >> $GITHUB_STEP_SUMMARY
-          echo "* Verbose: ${{ env.VERBOSE }}" >> $GITHUB_STEP_SUMMARY
-          echo "* Dry-Run: ${{ env.DRY_RUN }}" >> $GITHUB_STEP_SUMMARY
+          echo "* Verbose: ${{ inputs.verbose }}" >> $GITHUB_STEP_SUMMARY
+          echo "* Dry-Run: ${{ inputs.dryRun }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "## Result" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
